# cgeo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cgeo.c  disable_c_ext.py  pyproject.toml  setup.py  test.py  win32_make.bat
.github/workflows/: build-wheels.yml  build.yml  ci.yml  pre-commit.yml  release.yml  test-python-fallback.yml
cgeo/: __init__.py  __init__.pyi  _cgeo.py  _cgeo_slow.py
src/cgeo/: _cgeo.py
