[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cgeo"
version = "1.0"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.setuptools]
packages = ["cgeo"]

[[project.authors]]
name = "Zeev Rotshtein"
email = "zeevro@gmail.com"

[[project.maintainers]]
name = "Zeev Rotshtein"
email = "zeevro@gmail.com"

[project.urls]
Repository = "https://github.com/zeevro/cgeo.git"

[tool.ruff]
line-length = 150
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Order is in keeping with output of `ruff linter`

    # Rules that conflict with formatter
    "E111", "E114", "E117", "E501", "W191", "D206", "D300", "COM812", "COM819", "ISC001", "ISC002", "Q",

    # Entire categories
    "D", "PT",

    # Individual rules (one line per category)
    "B028",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["collections.abc", "typing"]

[tool.ruff.format]
quote-style = "single"

[tool.cibuildwheel]
build-frontend = "build[uv]"
free-threaded-support = true
test-command = "python {package}/test.py"
test-skip = ["*arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "i686", "aarch64"]
before-build = "rm -rf {project}/build"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64", "universal2"]
before-build = "rm -rf {project}/build"

[tool.cibuildwheel.windows]
before-build = "if exist build rmdir /s /q build"
