[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zeevro-cgeo"
version = "1.1.0"
requires-python = ">=3.9"
authors = [{ name = "Zeev Rotshtein", email = "zeevro@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/zeevro/cgeo"

[tool.ruff]
line-length = 150
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "W191", # tab-indentation - conflicts with formatter
    "E111", # indentation-with-invalid-multiple - conflicts with formatter
    "E114", # indentation-with-invalid-multiple-comment - conflicts with formatter
    "E117", # over-indented - conflicts with formatter
    "D206", # indent-with-spaces - conflicts with formatter
    "D300", # triple-single-quotes - conflicts with formatter
    "Q000", # bad-quotes-inline-string - conflicts with formatter
    "Q001", # bad-quotes-multiline-string - conflicts with formatter
    "Q002", # bad-quotes-docstring - conflicts with formatter
    "Q003", # avoidable-escaped-quote - conflicts with formatter
    "COM812", # missing-trailing-comma - conflicts with formatter
    "COM819", # prohibited-trailing-comma - conflicts with formatter
    "ISC001", # single-line-implicit-string-concatenation - conflicts with formatter
    "ISC002", # multi-line-implicit-string-concatenation - conflicts with formatter
    "E501", # line-too-long - see formatter documentation

    "PT", # linter: flake8-pytest-style

    "D104", # undocumented-public-package
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["collections.abc", "typing"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = [
    "D", # linter: pydocstyle
]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
files = ["src/", "test.py"]

[tool.uv]
cache-keys = ["pyproject.toml", "setup.py", "cgeo.c"]

[tool.cibuildwheel]
test-command = 'python -W "error:Could not import cgeo C extension" {package}/test.py -v'
